--- a/src/Sheets/Row Template/RowComponent.module.css
+++ b/src/Sheets/Row Template/RowComponent.module.css
@@ -25,7 +25,7 @@
 }
 
 .bodyRow.darkTheme {
-  background: rgba(28, 28, 30, 0.85);
+  background: rgba(44, 44, 46);
   backdrop-filter: blur(40px) saturate(150%);
   -webkit-backdrop-filter: blur(40px) saturate(150%);
   box-shadow:
